--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>LoftHouse</title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<header class="header">
+		<div class="header__top">
+			<div class="container">
+				<div class="header__top-row">
+					<a class="logo" href="#"><img src="images/header/logo.svg" alt="LoftHouse logo"></a>
+					<div class="header__nav">
+						<nav class="nav">
+							<ul class="nav__list">
+								<li><a href="#">О комплексе</a></li>
+								<li><a href="#">Район</a></li>
+								<li><a href="#">Каталог квартир</a></li>
+								<li><a href="#">Ипотека</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<h1 class="header__title">
+				Жилой комплекс<br>в историческом центре
+				<a href="#benefits"><img class="header__title-icon" src="images/header/mouse.svg" alt="scroll next"></a>
+			</h1>
+		</div>
+		<div class="header__bottom">
+			<div class="text-right">
+				<a class="info info--map" href="#section-map">Наб. реки Фонтанки 10-15</a>
+			</div>
+			<a class="info info--tel" href="tel:88121234567">8 (812) 123-45-67</a>
+		</div>
+	</header>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/slick.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
