Сделал блок преимуществ('&nbsp;' попортил мне жизнь)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>LoftHouse</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 	<header class="header">
 		<div class="header__top">
@@ -39,7 +41,34 @@
 			<a class="info info--tel" href="tel:88121234567">8 (812) 123-45-67</a>
 		</div>
 	</header>
+	<main>
+		<section class="benefits none1">
+			<h2 class="visually-hidden">Преимущества ЖК</h2>
+			<div class="container container--sm">
+				<div class="benefits__row">
+					<div class="benefits__item">
+						<img src="images/benefits/bench.svg" alt="" class="benefits__item-img">
+						<p class="benefits__item-text">Рядом исторические парки&nbsp;и&nbsp;скверы</p>
+					</div>
+
+					<div class="benefits__item">
+						<img src="images/benefits/building.svg" alt="" class="benefits__item-img">
+						<p class="benefits__item-text">Полностью обустроенный</p>
+					</div>
+					<div class="benefits__item">
+						<img src="images/benefits/fountain.svg" alt="" class="benefits__item-img">
+						<p class="benefits__item-text">10 фонтанов на территории</p>
+					</div>
+					<div class="benefits__item">
+						<img src="images/benefits/bicycle.svg" alt="" class="benefits__item-img">
+						<p class="benefits__item-text">6 км велодорожек</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
+
 </html>
