Добавил секцию с квартирами

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</header>
 	<main>
-		<section class="benefits none1">
+		<section class="benefits">
 			<h2 class="visually-hidden">Преимущества ЖК</h2>
 			<div class="container container--sm">
 				<div class="benefits__row">
@@ -63,6 +63,29 @@
 						<img src="images/benefits/bicycle.svg" alt="" class="benefits__item-img">
 						<p class="benefits__item-text">6 км велодорожек</p>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="appartments">
+			<div class="container">
+				<h2 class="appartments__title title">Наши квартиры</h2>
+				<div class="appartments__cards">
+					<a class="card" href="#">
+						<img class="card__img" src="images/appartments/appartment-1.jpg" alt="Пентхаус “Loft Олимп”">
+						<h3 class="card__title">Пентхаус “Loft Олимп”</h3>
+					</a>
+					<a class="card" href="#">
+						<img class="card__img" src="images/appartments/appartment-2.jpg" alt="Апартаменты “Nice Loft”">
+						<h3 class="card__title">Апартаменты “Nice Loft”</h3>
+					</a>
+					<a class="card" href="#">
+						<img class="card__img" src="images/appartments/appartment-3.jpg" alt="Апартаменты “Loft Studio”">
+						<h3 class="card__title">Апартаменты “Loft Studio”</h3>
+					</a>
+					<a class="card" href="#">
+						<img class="card__img" src="images/appartments/appartment-4.jpg" alt="Loft квартира “Престиж”">
+						<h3 class="card__title">Loft квартира “Престиж”</h3>
+					</a>
 				</div>
 			</div>
 		</section>
