--- a/index.html
+++ b/index.html
@@ -89,6 +89,37 @@
 				</div>
 			</div>
 		</section>
+		<section class="cta">
+			<div class="container">
+				<h2 class="cta__title title">Хотите посмотреть?</h2>
+				<div class="cta__wrapper">
+					<p class="cta__text">ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в которых разместится всего 56 квартир.</p>
+					<form class="cta__form form" action="#">
+						 <input class="form__input" type="text" placeholder="Ваше имя">
+						 <input class="form__input" type="text" placeholder="Ваш телефон">
+						 <p class="form__privacy">*Мы никому не передаем ваши данные.<br>И не сохраняем ваш номер в базу.</p>
+						 <button class="form__button" type="submit">Посмотреть район</button>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section class="video">
+			<h2 class="visually-hidden">Видео про ЖК LoftHOuse</h2>
+			<div class="container">
+				<a class="video__link" href="https://www.youtube.com/watch?v=bhJNL9JUsnY">
+					<img class="video__icon" src="images/video/play.svg" alt="">
+					<img class="video__img" src="images/video/video-img.jpg" alt="">
+				</a>
+			</div>
+		</section>
+		<section class="section-map">
+			<div class="container">
+				<h2 class="section-map__title title">Район на карте</h2>
+				<div class="section-map__map">
+					<div class="map" id="map"></div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
