Добавил секции фидбек и футер. Сделал декор элементы для секций

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 						<h3 class="card__title">Апартаменты “Nice Loft”</h3>
 					</a>
 					<a class="card" href="#">
-						<img class="card__img" src="images/appartments/appartment-3.jpg" alt="Апартаменты “Loft Studio”">
+						<img class="card__img" src="images/appartments/appartment-3.jpg"
+							alt="Апартаменты “Loft Studio”">
 						<h3 class="card__title">Апартаменты “Loft Studio”</h3>
 					</a>
 					<a class="card" href="#">
@@ -93,12 +94,15 @@
 			<div class="container">
 				<h2 class="cta__title title">Хотите посмотреть?</h2>
 				<div class="cta__wrapper">
-					<p class="cta__text">ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в которых разместится всего 56 квартир.</p>
+					<p class="cta__text">ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб.
+						реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В
+						здании будет три секции, в которых разместится всего 56 квартир.</p>
 					<form class="cta__form form" action="#">
-						 <input class="form__input" type="text" placeholder="Ваше имя">
-						 <input class="form__input" type="text" placeholder="Ваш телефон">
-						 <p class="form__privacy">*Мы никому не передаем ваши данные.<br>И не сохраняем ваш номер в базу.</p>
-						 <button class="form__button" type="submit">Посмотреть район</button>
+						<input class="form__input" type="text" placeholder="Ваше имя">
+						<input class="form__input" type="text" placeholder="Ваш телефон">
+						<p class="form__privacy">*Мы никому не передаем ваши данные.<br>И не сохраняем ваш номер в базу.
+						</p>
+						<button class="form__button" type="submit">Посмотреть район</button>
 					</form>
 				</div>
 			</div>
@@ -120,7 +124,63 @@
 				</div>
 			</div>
 		</section>
+		<section class="feedback">
+			<div class="container">
+				<h2 class="feedback__title title">Есть вопросы?</h2>
+				<form class="feedback__form form" action="#">
+					<p class="form__privacy">*Мы никому не передаем ваши данные.<br>И не сохраняем ваш номер в базу.</p>
+					<input class="form__input" type="text" placeholder="Ваше имя">
+					<input class="form__input" type="text" placeholder="Ваш телефон">
+					<button class="form__button" type="submit">Посмотреть район</button>
+				</form>
+			</div>
+		</section>
 	</main>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__grid">
+				<div class="footer__logo">
+					<a class="logo" href="#"><img src="images/header/logo.svg" alt="LoftHouse logo"></a>
+				</div>
+				<div class="footer__nav">
+					<nav class="footer__nav">
+						<ul class="footer__nav-list">
+							<li><a href="#">О комплексе</a></li>
+							<li><a href="#">Район</a></li>
+							<li><a href="#">Каталог квартир</a></li>
+							<li><a href="#">Ипотека</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__nav">
+					<nav class="footer__nav">
+						<ul class="footer__nav-list">
+							<li><a href="#">Поселение и переезд</a></li>
+							<li><a href="#">Сервисные услуги</a></li>
+							<li><a href="#">Экологическая устойчивость</a></li>
+							<li><a href="#">Инвестиционные возможности</a></li>
+							<li><a href="#">Программа лояльности </a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__address">
+					<ul class="footer__nav-list">
+						<li>Адрес: Наб. реки Фонтанки 10-15</li>
+						<li>Телефон: <a href="tel:88121234567">8 (812) 123-45-67</a></li>
+						<li>Отдел продаж: 10:00 - 20:00</li>
+						<li>E-mail: <a class="link-bold" href="mailto:vip@lofthouse.ru">vip@lofthouse.ru</a></li>
+					</ul>
+					<ul class="footer__socials">
+						<li><a href="#"><img src="images/socials/youtube.svg" alt=""></a></li>
+						<li><a href="#"><img src="images/socials/vk.svg" alt=""></a></li>
+						<li><a href="#"><img src="images/socials/facebook.svg" alt=""></a></li>
+						<li><a href="#"><img src="images/socials/instagram.svg" alt=""></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
