--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 							</ul>
 						</nav>
 					</div>
+					<div class="header__nav-btn">
+						<button class="nav-icon-btn">
+							<div class="nav-icon"></div>
+							<div class="nav-icon"></div>
+							<div class="nav-icon"></div>
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -41,7 +48,7 @@
 			<a class="info info--tel" href="tel:88121234567">8 (812) 123-45-67</a>
 		</div>
 	</header>
-	<main>
+	<!-- <main>
 		<section class="benefits">
 			<h2 class="visually-hidden">Преимущества ЖК</h2>
 			<div class="container container--sm">
@@ -180,8 +187,8 @@
 				</div>
 			</div>
 		</div>
-	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	</footer> -->
+
 	<script src="js/main.js"></script>
 </body>
 
