В тот раз забыл убрать комментирование

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a class="info info--tel" href="tel:88121234567">8 (812) 123-45-67</a>
 		</div>
 	</header>
-	<!-- <main>
+	<main>
 		<section class="benefits">
 			<h2 class="visually-hidden">Преимущества ЖК</h2>
 			<div class="container container--sm">
@@ -187,7 +187,7 @@
 				</div>
 			</div>
 		</div>
-	</footer> -->
+	</footer>
 
 	<script src="js/main.js"></script>
 </body>
